--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
 		"react": "18.1.0",
 		"react-dom": "18.1.0",
 		"react-qr-code": "^2.0.7",
+		"react-tsparticles": "^2.0.6",
 		"react-youtube": "^9.0.2",
-		"socket.io-client": "^4.5.1"
+		"socket.io-client": "^4.5.1",
+		"tsparticles": "^2.0.6"
 	},
 	"devDependencies": {
 		"@svgr/webpack": "^6.2.1",
